--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -7,7 +7,7 @@ main:
   - title: Technology
     url: architecture
   - title: Dashboard
-    url: flare-dashboard
+    url: vera4cast
   - title: Team
     url: team
   - title: Partners
