--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -4,8 +4,8 @@ main:
     url: about
   - title: Resources
     url: resources
-  - title: Technology
-    url: architecture
+  - title: Data
+    url: data
   - title: Forecasting Challenge
     url: vera4cast
   - title: Team
