--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -10,7 +10,7 @@ main:
     url: vera4cast
   - title: Team
     url: team
-  - title: Partners
-    url: partners
+  - title: Products
+    url: products
   - title: "Contact"
     url: contact
